--- a/src/tp2_lp/AdmUI.form
+++ b/src/tp2_lp/AdmUI.form
@@ -93,6 +93,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Validar servicos"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnValidarServicosActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnNovoAdm">
       <Properties>
