como fazer lista de servicos?

--- a/src/tp2_lp/ProfUI.form
+++ b/src/tp2_lp/ProfUI.form
@@ -33,16 +33,14 @@
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="btnCadastrarServico" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="btnOrcamentos" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="btnNovoAdm" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="btnValidarServicos" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnListarServicos" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="txtNome" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="txtUsername" min="-2" pref="100" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace min="58" pref="63" max="32767" attributes="0"/>
+                      <EmptySpace min="58" pref="77" max="32767" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -61,17 +59,13 @@
                   <Component id="txtUsername" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txtNome" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="37" max="32767" attributes="0"/>
+              <EmptySpace pref="52" max="32767" attributes="0"/>
               <Component id="btnAlterarDados" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="btnOrcamentos" min="-2" max="-2" attributes="0"/>
+              <Component id="btnListarServicos" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="btnCadastrarServico" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="btnNovoAdm" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="btnValidarServicos" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="77" max="-2" attributes="0"/>
               <Component id="btnVoltar" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
           </Group>
@@ -79,10 +73,13 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JButton" name="btnOrcamentos">
+    <Component class="javax.swing.JButton" name="btnListarServicos">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Listar orcamentos"/>
+        <Property name="text" type="java.lang.String" value="Meus servicos"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnListarServicosActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnVoltar">
       <Properties>
@@ -110,20 +107,13 @@
         <Property name="text" type="java.lang.String" value="jLabel1"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btnValidarServicos">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Validar servicos"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JButton" name="btnNovoAdm">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Novo administrador"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JButton" name="btnCadastrarServico">
       <Properties>
         <Property name="text" type="java.lang.String" value="Novo servico"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCadastrarServicoActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
