--- a/src/tp2_lp/CltUI.form
+++ b/src/tp2_lp/CltUI.form
@@ -88,6 +88,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Fazer orcamento"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnFazerOrcamentoActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnVoltar">
       <Properties>
